# Social-AI-Automation

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: buffer.md  setup.md  telegram.md
src/: config.py
src/api/: app.py  campaigns.py
src/bots/telegram/: bot.py
src/db/: models.py
src/generator/: generator.py
src/generator/prompts/: week_of_posts.md
src/images/: higgsfield.py  nano_banana.py  pollinations.py
src/scheduler/: buffer_client.py  scheduler.py
